[gd_scene load_steps=3 format=3 uid="uid://eydk1r5m47sa"]

[ext_resource type="Script" uid="uid://dmdwb3t1vu80s" path="res://scripts/select/enemy_select_scene.gd" id="1_ena45"]
[ext_resource type="Texture2D" uid="uid://tmm6eht7wilt" path="res://scenes/map/background4.png" id="2_ena45"]

[node name="EnemySelectScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ena45")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0
texture = ExtResource("2_ena45")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 625.0
offset_top = 1.0
offset_right = 1025.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 60
text = "选择敌人"
horizontal_alignment = 1

[node name="EnemyContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 166.0
offset_right = 1432.0
offset_bottom = 766.0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="EnemyDetailsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 654.0
offset_top = 241.0
offset_right = 1004.0
offset_bottom = 441.0

[node name="EnemyName" type="Label" parent="EnemyDetailsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "敌人名称"
horizontal_alignment = 1

[node name="EnemyDescription" type="Label" parent="EnemyDetailsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "敌人描述"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DifficultyLabel" type="Label" parent="EnemyDetailsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "难度: ★★☆☆"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 568.0
offset_right = 920.0
offset_bottom = 638.0
theme_override_font_sizes/font_size = 30
text = "开始战斗"

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_top = 800.0
offset_right = 100.0
offset_bottom = 850.0
theme_override_font_sizes/font_size = 20
text = "返回"
